# adf-json-processor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
docs/: architecture.md  index.md  setup.md
scripts/: deploy.sh  run_processor.sh  setup_env.sh
src/adf-json-processor/: notebook_init.py
src/adf-json-processor/config/: config.py
src/adf-json-processor/file_handling/: file_handler.py
src/adf-json-processor/processing/: process_files.py
src/adf_json_processor/: initialization.py  notebook_init.py
src/adf_json_processor/auth/: auth_manager.py  auth_strategy.py
src/adf_json_processor/catalog/: catalog_utils.py
src/adf_json_processor/config/: config.py  config_manager.py
src/adf_json_processor/file_handling/: file_handler.py
src/adf_json_processor/helpers/: helper.py
src/adf_json_processor/processing/: conversion.py  file_processor.py  process_files.py
src/adf_json_processor/storage/: table_manager.py
src/adf_json_processor/transformations/: dataframe_utils.py
src/adf_json_processor/utils/: display_utils.py  helper.py  logger.py  package_installer.py  widget_installer.py  widget_manager.py
src/adf_json_processor/workflow/: file_processor.py  json_processor.py  pipeline_processor.py
src/auth/: auth_strategy.py
src/file_handling/: file_handler.py
src/processing/: process_files.py
tests/: test_authenticator.py  test_catalog_utils.py  test_config.py  test_config_manager.py  test_file_handler.py  test_file_processor.py  test_helper.py  test_logger.py  test_table_manager.py  test_widget_manager.py
