[tool.poetry]
name = "adf-json-processor"
version = "0.1.4"
description = "ADF JSON Processor for Azure Data Lake"
authors = ["Azmir Salihovic <azmir.salihovic@twoday.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xazms/adf-json-processor"

[tool.poetry.dependencies]
python = ">=3.8"
requests = "^2.26"
pyspark = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"  # ✅ Updated to latest stable version
flake8 = "^4.0.1"
black = "^24.3.0"  # ✅ Fixed Regular Expression Denial of Service (ReDoS)
pre-commit = "^3.0.0"  # ✅ Updated for better compatibility

[tool.poetry.scripts]
process-adf = "adf_json_processor.processing.file_processor:main"

[build-system]
requires = ["setuptools>=70.0", "wheel"]  # ✅ Fixed Command Injection vulnerability
build-backend = "setuptools.build_meta"